# hackaton_roi_calculator

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_openbizroi.yml
src/hackaton_roi/: app.py  settings.py
src/hackaton_roi/prompts/: break.py  graphs.js  input.json  input.py  main_prompt.md  main_prompt2.md  output.json  output.py  output_exemple.json  template_relatorio.html  template_relatorio2.html
src/hackaton_roi/utils/: analytics.py  file_handler.py  logger.py  manual_input.py  openai_utils.py  settings.py
