[tool.poetry]
name = "hackaton-roi"
version = "0.1.0"
description = "Empowering businesses with AI-driven ROI predictions and strategic insights."
authors = [
    "Raul Gomes <rsgomes86@gmail.com>",
    "Leonardo Andrade <leonardoandrade.eng@gmail.com>",
    "Igor <igorchieppe@hotmail.com>"
]
readme = "README.md"
packages = [{include = "hackaton_roi", from = "src"}]
license = "MIT"  # Adicione uma licença apropriada, se aplicável.

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.43.2,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
plotly-express = "^0.4.1"
matplotlib = "^3.10.1"
fpdf = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
